VDR Plugin 'xineliboutput' Revision History
-------------------------------------------

????-??-??: Version 1.1.0

- Added sharpness and noise reduction setup options for VDPAU.
- Added '-C'/'--config' command-line option to specify xine's configuration file.
- Replaced cIConv with VDR's cCharConv.
- Supports only for vdr-1.6.0 or later.
- Added an option to limit number of remote clients
- Added math library (-lm) to vdr-sxfe when building with 
  Xrender / HUD OSD support (Thanks to Anssi Hannula)
- Implemented build-time configuration script
- Replaced build-time options INTERPRET_LIRC_KEYS and FE_TOGGLE_FULLSCREEN
  with run-time option --hotkeys
- Added an option to adjust the stepping value that is used for 
  metronom live mode sync (Thanks to Andreas Auras)
- Added preliminary SVDRP interface (Thanks to Rolf Ahrenberg)
- Fixed aspect ratio problems when using ffmpeg mpeg2 decoder
- H.264 updates
- Added an option to use xine-lib DVB subtitles decoder

2008-10-24: Version 1.0.3  (branch-1_0_x)
Backported bugfixes from CVS trunk:
- Added missing sxfe display locks (Thanks to Antti Seppälä)
- Modified HUD OSD scaling parameters (Thanks to Rolf Ahrenberg)
- Fixes to HUD OSD drawing (Thanks to Rolf Ahrenberg)
- Fixed --aspect=auto:path_to_script option (Thanks to Armin Diedering)
- Fixed playing first track of audio CD (requires xine-lib 1.1.5)
- OS X build fixes (Thanks to Tero Siironen)
- Updated finnish translations (Thanks to Rolf Ahrenberg)
- Updated Italian translations (Thanks to Diego Pierotto)

2008-10-04: Version 1.0.2  (branch-1_0_x)
Backported bugfixes from CVS trunk:
- Fixed segfault when committing uninitialized OSD (Thanks to Rolf Ahrenberg)
- Fixed buffer errors when switching from HD channel to SD channel
- Fixed selecting DVD subtitles language from DVD menus
- Fixed setting DVD subtitles preferred language
- Fixed missing VDR OSD while playing DVDs
- Fixed DVD menu navigation when menu is not in title 0