@@ -3,6 +3,7 @@ VDR Plugin 'xineliboutput' Revision History
 
 ????-??-??: Version 1.1.0
 
+- Changed the default grab quality to match VDR's documentation.
 - Added sharpness and noise reduction setup options for VDPAU.
 - Added '-C'/'--config' command-line option to specify xine's configuration file.
 - Replaced cIConv with VDR's cCharConv.
